<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ScrollView
        android:id="@+id/scrollFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/nameText"
                app:layout_constraintBottom_toTopOf="@id/surnameField"
                app:layout_constraintEnd_toEndOf="@id/mainFrame"
                app:layout_constraintStart_toStartOf="@id/mainFrame">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/surnameText"
                app:layout_constraintBottom_toTopOf="@id/dateField"
                app:layout_constraintEnd_toEndOf="@id/mainFrame"
                app:layout_constraintStart_toStartOf="@id/mainFrame">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@color/purple_500"
                android:text="@string/dateText"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/passwordField"
                app:layout_constraintEnd_toEndOf="@id/mainFrame"
                app:layout_constraintStart_toStartOf="@id/mainFrame" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/pasText"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@id/passwordRepeatField"
                app:layout_constraintEnd_toEndOf="@id/mainFrame"
                app:layout_constraintStart_toStartOf="@id/mainFrame">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordRepeatField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/repPasText"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@id/buttonReg"
                app:layout_constraintEnd_toEndOf="@id/mainFrame"
                app:layout_constraintStart_toStartOf="@id/mainFrame">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:enabled="false"
                android:text="@string/regText"
                app:layout_constraintBottom_toBottomOf="@id/mainFrame"
                app:layout_constraintEnd_toEndOf="@id/mainFrame"
                app:layout_constraintStart_toStartOf="@id/mainFrame" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>